[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = "Learning sample for REST API in Python using Flask"
authors = ["Nrupesh Patel"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
