[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = "Learning sample for REST API in Python using Flask"
authors = ["Nrupesh Patel"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88
